Use plugin-plugin to manage plugins